--- a/LecherosAppFrontend/src/app/pages/list-usuario/list-usuario.component.html
+++ b/LecherosAppFrontend/src/app/pages/list-usuario/list-usuario.component.html
@@ -2,13 +2,12 @@
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
     </mat-form-field>
-
-    <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8">
     <table mat-table [dataSource]="usuario" matSort>
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        <td mat-cell *matCellDef="let row">{{row.usuarioId}}</td>
       </ng-container>
 
         <ng-container matColumnDef="nombre">
@@ -38,6 +37,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>actions</th>
           <td mat-cell *matCellDef="let row" colspan="2">
+            <button mat-button [routerLink]="'/add-ticket/'+row.usuarioId+'/'+row.nombre">Agregar Ticket</button>
             <button mat-button mat (click)="edit(row)">Editar</button>
             <button mat-button mat (click)="eliminarUsuario(row.id)">Eliminar</button>
           </td>
