--- a/LecherosAppFrontend/src/app/components/sidebar/sidebar.component.html
+++ b/LecherosAppFrontend/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-action-list>
-      <button routerLink = "'/'" mat-list-item>
+      <button [routerLink] = "'/'" mat-list-item>
         <mat-icon mat-list-icon>home</mat-icon> Inicio
       </button>
       <button mat-list-item routerLink = "/listUsuario">
@@ -8,9 +8,6 @@
       </button>
       <button mat-list-item routerLink = "/ticket">
         <mat-icon mat-list-icon>list</mat-icon>Ticket
-      </button>
-      <button mat-list-item routerLink = "/add-ticket">
-        <mat-icon mat-list-icon>add_circle_outline</mat-icon>Agregar Ticket
       </button>
       <button mat-list-item routerLink = "/registrar">
         <mat-icon mat-list-icon>add</mat-icon>Registrar
